--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "sweet.js": "0.7.4",
     "browserify": "4.1.2",
     "d3": "3.5.3",
-    "virtual-dom": "0.0.24"
+    "virtual-dom": "0.0.24",
+    "uglify-js": "2.4.16"
   }
 }
